--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ nav{
 nav img{
     width: 150px;
 }
+nav div {
+    display: flex;
+    gap: 15px;
+}
 .hero{
     color: aliceblue;
     font-family: 'Martel Sans', sans-serif;
@@ -51,17 +55,17 @@ nav img{
 }
 .hero> :nth-child(1){
     font-weight: bolder;
-    font-size: 48px;
+    font-size: 40px;
     text-align: center;
 }
 .hero> :nth-child(2){
     font-weight: 400;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
 }
 .hero> :nth-child(3){
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 .seperation{
@@ -113,6 +117,158 @@ select option {
     justify-content: center;
     gap: 15px;
 }
+
+
+.first{
+    display: flex;
+    max-width: 80vw;
+    margin: auto;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid rgb(255, 255, 255); */
+}
+.secimg {
+    position: relative;
+}
+.secimg img {
+    width: 35vw;
+    position: relative;
+    z-index: 10;
+}
+.secimg video {
+    width: 30.2vw;
+    position: absolute;
+    top: 65px;
+    right: 1px;
+}
+section.first>div{
+    display: flex;
+    flex-direction: column;
+    padding: 34px 0px;
+}
+section.first>div :nth-child(1) {
+    font-size: 30px;
+    font-weight: bold;
+}
+section.first>div :nth-child(2){
+    font-size: 17px;
+}
+
+
+.faq h2{
+    color: white;
+    width: 80vw;
+    margin: auto ;
+    margin-top: 20px;
+    text-align: center;
+}
+.faq{
+    color: white;
+    padding: 34px;
+}
+.faqbox {
+    transition: all 1s ease-out;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #2d2d2d;
+    padding: 24px;
+    max-width: 60vw;
+    margin: 10px auto;
+    cursor: pointer;
+}
+.faqbox:hover {
+    background-color: #423f3f;
+    color: white;
+}
+
+
+footer {
+    color: #aaaaaa;
+    max-width: 60vw;
+    margin: auto;
+    padding: 60px;
+}
+footer .questions {
+    padding: 34px 0;
+}
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.footer a {
+    color: #aaaaaa;
+    text-decoration: none;
+}
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+@media screen and (max-width: 752px) {
+
+    nav{
+        max-width: 90vw;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .secimg img {
+        width: 320px;
+    }
+
+    .secimg video {
+        width: 305px;
+    }
+
+    .hero> :nth-child(1) {
+        font-size: 32px;
+    }
+
+    .hero> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .hero> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    .hero-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+}
+
+
 
 
 
